[gd_scene load_steps=3 format=2]

[ext_resource path="res://Controllers/Game.gd" type="Script" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
HeartNutDialog = "res://UI/Dialog/JSON/0022.HeartNutGet.JSON"

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="TestTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="UI"]
[editable path="UI/levelUI/HealthMeter"]
